# batch-analyzer

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  example-urls.txt  package.json  railway.json  url.txt
reports/lenabel-v2_20250716_100524/: info.txt  page_144758767c3b.html  page_29396fd32d0c.html  page_5260fb3b43ff.html  page_9caf920e6203.html  page_a860b6044ec4.html  page_e246f184dd5a.html  page_f84d8a8ddddc.html
reports/lenabel-v2_20250716_102126/: info.txt  page_144758767c3b.html  page_29396fd32d0c.html  page_5260fb3b43ff.html  page_9caf920e6203.html  page_a860b6044ec4.html  page_e246f184dd5a.html  page_f84d8a8ddddc.html
reports/lenabel-v2_20250716_102639/: info.txt  page_144758767c3b.html  page_29396fd32d0c.html  page_5260fb3b43ff.html  page_9caf920e6203.html  page_a860b6044ec4.html  page_e246f184dd5a.html  page_f84d8a8ddddc.html
reports/lenabel-v2_20250716_103119/: info.txt  page_144758767c3b.html  page_29396fd32d0c.html  page_5260fb3b43ff.html  page_9caf920e6203.html  page_a860b6044ec4.html  page_e246f184dd5a.html  page_f84d8a8ddddc.html
reports/lenabel-v2_20250716_103452/: info.txt  page_144758767c3b.html  page_29396fd32d0c.html  page_5260fb3b43ff.html  page_9caf920e6203.html  page_a860b6044ec4.html  page_e246f184dd5a.html  page_f84d8a8ddddc.html
reports/lenabel-v2_20250716_103942/: info.txt  page_144758767c3b.html  page_29396fd32d0c.html  page_5260fb3b43ff.html  page_9caf920e6203.html  page_a860b6044ec4.html  (+2 more)
src/: main.rs
web-ui/: README.md  package.json
(+85 files in other folders)
