[package]
name = "batch_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at [https://doc.rust-lang.org/cargo/reference/manifest.html](https://doc.rust-lang.org/cargo/reference/manifest.html)

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4.41"
dotenv = "0.15"
rand = "0.8"
